--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,10 @@
 akka {
 
+  #loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
   stdout-loglevel = "DEBUG"
+  #logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
   #log-config-on-start = on
 
 #  actor {
@@ -17,7 +20,6 @@ akka {
 #  }
 
   log-dead-letters = on
-
   actor {
     debug {
       receive = on
