--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,23 @@
   },
   "babel": {
     "presets": [
+      "es2017",
+      "es2016",
       "es2015",
       "react",
-      "stage-3"
+      "stage-0"
+    ],
+    "plugins": [
+      "add-module-exports",
+      "transform-decorators-legacy",
+      [
+        "transform-runtime",
+        {
+          "helpers": false,
+          "polyfill": false,
+          "regenerator": true
+        }
+      ]
     ]
   },
   "license": "MIT",
@@ -26,18 +40,27 @@
     "react-router-redux": "^4.0.7",
     "react-bootstrap": "^0.30.7",
     "react-router-bootstrap": "^0.23.1",
+    "react-dnd": "^2.4.0",
+    "react-js-diagrams": "^3.1.3",
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
     "redux-saga": "^0.14.3",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "redux-undo": "^0.6.1",
+    "lodash": "4.17.4"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.17.0",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-runtime": "^6.20.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
