--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     //compile "com.orientechnologies:orientdb-server:${orientDbVersion}"
     //compile "com.orientechnologies:orientdb-studio:${orientDbVersion}"
 
+    testCompile 'net.sf.saxon:Saxon-HE:9.7.0-18'
+    testCompile "org.jsoup:jsoup:1.10.2"
+
     testCompile "junit:junit:4.12"
     testCompile "org.scalatest:scalatest_${scalaLibVersion}:3.0.1"
 }
