--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,8 @@
     "redux-thunk": "^2.1.0",
     "redux-undo": "^0.6.1",
     "lodash": "4.17.4",
-    "svg-intersections": "0.3.0"
+    "svg-intersections": "0.3.0",
+    "react-localstorage": "0.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
