--- a/client/package.json
+++ b/client/package.json
@@ -33,36 +33,38 @@
   },
   "license": "MIT",
   "dependencies": {
-    "react": "^15.5.0",
-    "react-dom": "^15.5.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.7",
-    "react-bootstrap": "^0.31.1",
-    "react-router-bootstrap": "^0.23.1",
+    "react-router": "^3.0.5",
+    "react-router-redux": "^4.0.8",
     "react-dnd": "^2.4.0",
-    "redux": "^3.6.0",
-    "redux-form": "^6.4.3",
-    "redux-saga": "^0.14.3",
-    "redux-thunk": "^2.1.0",
+    "react-dnd-html5-backend": "^2.4.0",
+    "material-ui": "^1.0.0-beta.2",
+    "material-ui-icons":"^1.0.0-alpha.19",
+    "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
+    "redux-saga": "^0.15.6",
+    "redux-thunk": "^2.2.0",
     "redux-undo": "^0.6.1",
     "lodash": "4.17.4",
     "svg-intersections": "0.3.0",
-    "react-localstorage": "0.3.1"
+    "react-localstorage": "0.3.1",
+    "typeface-roboto": "0.0.31"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-es2017": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.17.0",
+    "babel-core": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-runtime": "^6.20.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
