dnd & multiple actions

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,7 +28,7 @@ akka {
     }
   }
 
-  http.client.idle-timeout = 600 # 10 min
+  #http.client.idle-timeout = 600
 
   actor.default-mailbox.stash-capacity=10000
   persistence.internal-stash-overflow-strategy="akka.persistence.ThrowExceptionConfigurator"
