--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,7 +28,8 @@ akka {
     }
   }
 
-  #http.client.idle-timeout = 600
+  io.tcp.direct-buffer-size=2M
+  //http.client.idle-timeout=10s
 
   actor.default-mailbox.stash-capacity=10000
   persistence.internal-stash-overflow-strategy="akka.persistence.ThrowExceptionConfigurator"
