--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    scalaCompilerPlugin
+}
+
 dependencies {
     zinc "com.typesafe.zinc:zinc:0.3.15"
     zinc "org.scala-lang:scala-library:${zincScalaVersion}"
@@ -32,6 +36,11 @@ dependencies {
 
     compile "org.scala-lang.modules:scala-xml_${scalaLibVersion}:1.0.6"
     compile "org.scala-lang.modules:scala-parser-combinators_${scalaLibVersion}:1.0.6"
+
+    scalaCompilerPlugin "org.scalamacros:paradise_${scalaVersion}:2.1.1"
+    compile "org.scalameta:scalameta_${scalaLibVersion}:1.8.0"
+
+    compile "org.scalaz:scalaz-core_${scalaLibVersion}:7.2.14"
 
     compile "com.typesafe.akka:akka-actor_${scalaLibVersion}:${akkaVersion}"
     compile "com.typesafe.akka:akka-slf4j_${scalaLibVersion}:${akkaVersion}"
@@ -51,21 +60,21 @@ dependencies {
     compile "org.fusesource.leveldbjni:leveldbjni-all:1.8"
 
     compile "javax.validation:validation-api:1.1.0.Final"
-    compile "org.apache.commons:commons-lang3:3.5"
+    compile "org.apache.commons:commons-lang3:3.6"
     compile "commons-io:commons-io:2.5"
 
     compile "org.slf4j:slf4j-api:${slf4j}"
     compile "org.slf4j:slf4j-log4j12:${slf4j}"
-
-    //compile "com.orientechnologies:orientdb-core:${orientDbVersion}"
-    //compile "com.orientechnologies:orientdb-client:${orientDbVersion}"
-    //compile "com.orientechnologies:orientdb-object:${orientDbVersion}"
-    //compile "com.orientechnologies:orientdb-server:${orientDbVersion}"
-    //compile "com.orientechnologies:orientdb-studio:${orientDbVersion}"
 
     testCompile 'net.sf.saxon:Saxon-HE:9.7.0-18'
     testCompile "org.jsoup:jsoup:1.10.2"
 
     testCompile "junit:junit:4.12"
     testCompile "org.scalatest:scalatest_${scalaLibVersion}:3.0.1"
+}
+
+tasks.withType(ScalaCompile) {
+    scalaCompileOptions.additionalParameters = [
+            "-Xplugin:" + configurations.scalaCompilerPlugin.asPath
+    ]
 }
