--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.0",
     "react-tap-event-plugin": "^2.0.1",
-    "material-ui": "^1.0.0-beta.2",
+    "material-ui": "^1.0.0-beta.5",
     "material-ui-icons":"^1.0.0-alpha.19",
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
@@ -52,7 +52,9 @@
     "lodash": "4.17.4",
     "svg-intersections": "0.3.0",
     "react-localstorage": "0.3.1",
-    "typeface-roboto": "0.0.31"
+    "typeface-roboto": "0.0.31",
+    "dom-to-image": "2.5.2",
+    "file-saver": "^1.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -67,7 +69,7 @@
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "6.23.0",
-    "clean-webpack-plugin": "^0.1.15",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
     "extract-text-webpack-plugin": "^1.0.1",
