--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,7 @@
     "redux-undo": "^0.6.1",
     "lodash": "^4.17.4",
     "svg-intersections": "^0.3.1",
-    "react-localstorage": "0.3.1",
+    "react-localstorage": "^0.3.1",
     "typeface-roboto": "^0.0.35",
     "dom-to-image": "^2.5.2",
     "file-saver": "^1.3.3"
