jGit-based storage for archimate schemas

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ typings/
 src/main/resources/archimate/Spec301AppendixB/*.png
 src/main/resources/archimate/Spec301AppendixB/.tmp
 src/main/resources/archimate/Spec301AppendixB/test
+
+# storage
+storage/.git
