--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,12 +32,26 @@ akka {
   //http.client.idle-timeout=10s
 
   actor.default-mailbox.stash-capacity=10000
+
   persistence.internal-stash-overflow-strategy="akka.persistence.ThrowExceptionConfigurator"
 
-  persistence.journal.plugin = "akka.persistence.journal.leveldb"
-  persistence.journal.leveldb.dir = "target/journal"
-
+  persistence.journal.plugin = "akka.persistence.journal.inmem"
   persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   persistence.snapshot-store.local.dir = "target/snapshots"
+
+  persistence.snapshot-store.jgit {
+    class = "org.mentha.utils.akka.persistence.jgit.snapshot.JgitTextSnapshotStore"
+    plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
+    stream-dispatcher = "akka.persistence.dispatchers.default-stream-dispatcher"
+    branch-prefix = "branch"
+    dir = "storage"
+    max-load-attempts = 3
+    commiter.name = "Mentha Archimate"
+    commiter.mail = "archimate@localhost"
+  }
+
+  mentha.state.persistence.journal = "akka.persistence.journal.inmem"
+  mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit"
+  mentha.state.persistence.pretty = true
 
 }
