--- a/build.gradle
+++ b/build.gradle
@@ -52,12 +52,12 @@ dependencies {
     compile 'io.jsonwebtoken:jjwt:0.7.0'
 
     compile "com.typesafe.play:play-json_${scalaLibVersion}:${playVersion}"
-
     //compile "com.typesafe.play:play_${scalaLibVersion}:${playVersion}"
     //compile "com.typesafe.play:play-ws_${scalaLibVersion}:${playVersion}"
 
-    compile "org.iq80.leveldb:leveldb:0.9"
-    compile "org.fusesource.leveldbjni:leveldbjni-all:1.8"
+    compile "org.eclipse.jgit:org.eclipse.jgit:4.8.0.201706111038-r"
+    //compile "org.iq80.leveldb:leveldb:0.9"
+    //compile "org.fusesource.leveldbjni:leveldbjni-all:1.8"
 
     compile "javax.validation:validation-api:1.1.0.Final"
     compile "org.apache.commons:commons-lang3:3.6"
@@ -65,9 +65,6 @@ dependencies {
 
     compile "org.slf4j:slf4j-api:${slf4j}"
     compile "org.slf4j:slf4j-log4j12:${slf4j}"
-
-//    testCompile 'net.sf.saxon:Saxon-HE:9.7.0-18'
-//    testCompile "org.jsoup:jsoup:1.10.2"
 
     testCompile "junit:junit:4.12"
     testCompile "org.scalatest:scalatest_${scalaLibVersion}:3.0.1"
