--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,7 +35,9 @@ akka {
 
   persistence.internal-stash-overflow-strategy="akka.persistence.ThrowExceptionConfigurator"
 
-  persistence.journal.plugin = "akka.persistence.journal.inmem"
+  persistence.journal.plugin = "akka.persistence.journal.leveldb"
+  persistence.journal.leveldb.dir = "target/journal"
+
   persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   persistence.snapshot-store.local.dir = "target/snapshots"
 
@@ -50,7 +52,7 @@ akka {
     commiter.mail = "archimate@localhost"
   }
 
-  mentha.state.persistence.journal = "akka.persistence.journal.inmem"
+  mentha.state.persistence.journal = "akka.persistence.journal.leveldb"
   mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit"
   mentha.state.persistence.pretty = true
 
