Fix git-storage related issues, make id generator works with fake timesource

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,9 +35,7 @@ akka {
 
   persistence.internal-stash-overflow-strategy="akka.persistence.ThrowExceptionConfigurator"
 
-  persistence.journal.plugin = "akka.persistence.journal.leveldb"
-  persistence.journal.leveldb.dir = "target/journal"
-
+  persistence.journal.plugin = "akka.persistence.journal.inmem"
   persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   persistence.snapshot-store.local.dir = "target/snapshots"
 
@@ -52,7 +50,7 @@ akka {
     commiter.mail = "archimate@localhost"
   }
 
-  mentha.state.persistence.journal = "akka.persistence.journal.leveldb"
+  mentha.state.persistence.journal = "akka.persistence.journal.inmem"
   mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit"
   mentha.state.persistence.pretty = true
 
