#50 - Store Model JSON (nodes, edges, view) as a jGit Tree

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -39,11 +39,12 @@ akka {
   persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   persistence.snapshot-store.local.dir = "target/snapshots"
 
-  persistence.snapshot-store.jgit {
-    class = "org.mentha.utils.akka.persistence.jgit.snapshot.JgitTextSnapshotStore"
+  persistence.snapshot-store.jgit-json-model {
+    class = "org.mentha.utils.archimate.state.ModelSnapshotStore"
     plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
     stream-dispatcher = "akka.persistence.dispatchers.default-stream-dispatcher"
     branch-prefix = "branch"
+    pretty = on
     dir = "storage"
     max-load-attempts = 3
     commiter.name = "Mentha Archimate"
@@ -51,7 +52,7 @@ akka {
   }
 
   mentha.state.persistence.journal = "akka.persistence.journal.inmem"
-  mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit"
+  mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit-json-model"
   mentha.state.persistence.pretty = true
 
 }
