--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -39,6 +39,17 @@ akka {
   persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   persistence.snapshot-store.local.dir = "target/snapshots"
 
+  persistence.snapshot-store.jgit {
+    class = "org.mentha.utils.akka.persistence.jgit.snapshot.JgitTextSnapshotStore"
+    plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
+    stream-dispatcher = "akka.persistence.dispatchers.default-stream-dispatcher"
+    branch-prefix = "branch"
+    dir = "storage"
+    max-load-attempts = 3
+    commiter.name = "Mentha Archimate"
+    commiter.mail = "archimate@localhost"
+  }
+
   persistence.snapshot-store.jgit-json-model {
     class = "org.mentha.utils.archimate.state.ModelSnapshotStore"
     plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
@@ -52,7 +63,7 @@ akka {
   }
 
   mentha.state.persistence.journal = "akka.persistence.journal.inmem"
-  mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit-json-model"
+  mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit"
   mentha.state.persistence.pretty = true
 
 }
