Yet another AutoSave, Config options for durations

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,7 +29,7 @@ akka {
   }
 
   io.tcp.direct-buffer-size=2M
-  //http.client.idle-timeout=10s
+  http.server.idle-timeout=30s # TODO: do something with this
 
   actor.default-mailbox.stash-capacity=10000
 
@@ -65,5 +65,7 @@ akka {
   mentha.state.persistence.journal = "akka.persistence.journal.inmem"
   mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit"
   mentha.state.persistence.pretty = true
+  mentha.state.poisonPillDelay = 30s
+  mentha.state.autoSaveInterval = 90s
 
 }
