--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,7 +29,8 @@ akka {
   }
 
   io.tcp.direct-buffer-size=2M
-  http.server.idle-timeout=30s # TODO: do something with this
+  http.server.idle-timeout=60s # TODO: do something with this
+  http.server.request-timeout=10s # TODO: do something with this
 
   actor.default-mailbox.stash-capacity=10000
 
