--- a/main/src/main/resources/application.conf
+++ b/main/src/main/resources/application.conf
@@ -26,19 +26,20 @@ akka {
   persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   persistence.snapshot-store.local.dir = "target/snapshots"
 
-  persistence.snapshot-store.jgit {
-    class = "org.mentha.utils.akka.persistence.jgit.snapshot.JgitTextSnapshotStore"
+  persistence.snapshot-store.jgit-text-model {
+    class = "org.mentha.utils.akka.persistence.jgit.snapshot.JgitJsonTextSnapshotStore"
     plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
     stream-dispatcher = "akka.persistence.dispatchers.default-stream-dispatcher"
     branch-prefix = "branch"
+    pretty = on
     dir = "storage"
     max-load-attempts = 3
     commiter.name = "Mentha Archimate"
     commiter.mail = "archimate@localhost"
   }
 
-  persistence.snapshot-store.jgit-json-model {
-    class = "org.mentha.tools.archimate.state.ModelSnapshotStore"
+  persistence.snapshot-store.jgit-path-model {
+    class = "org.mentha.tools.archimate.state.ModelJsonPathSnapshotStore"
     plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
     stream-dispatcher = "akka.persistence.dispatchers.default-stream-dispatcher"
     branch-prefix = "branch"
@@ -50,9 +51,9 @@ akka {
   }
 
   mentha.state.persistence.journal = "akka.persistence.journal.inmem"
-  mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit"
-  mentha.state.persistence.pretty = true
+  mentha.state.persistence.snapshot = "akka.persistence.snapshot-store.jgit-path-model"
   mentha.state.poisonPillDelay = 30s
   mentha.state.autoSaveInterval = 90s
+  mentha.state.autoSaveThreshold = 1000
 
 }
