--- a/archimate-frontend/package.json
+++ b/archimate-frontend/package.json
@@ -23,6 +23,8 @@
     "plugins": [
       "add-module-exports",
       "transform-decorators-legacy",
+      "transform-react-remove-prop-types",
+      "transform-react-constant-elements",
       [
         "transform-runtime",
         {
@@ -70,7 +72,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
