--- a/archimate-frontend/package.json
+++ b/archimate-frontend/package.json
@@ -47,13 +47,13 @@
     "react-dnd-html5-backend": "^2.5.4",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
-    "redux-form": "^7.2.1",
+    "redux-form": "^7.2.3",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "redux-undo": "^0.6.1",
-    "material-ui": "^1.0.0-beta.31",
+    "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "svg-intersections": "^0.3.2",
     "react-localstorage": "^0.3.1",
     "typeface-roboto": "^0.0.54",
@@ -77,7 +77,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-es2015-constants": "^6.1.4",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "react-hot-loader": "^3.1.3",
     "colors": "^1.1.2",
     "css-loader": "^0.28.9",
@@ -92,14 +92,15 @@
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-middleware": "^2.0.4",
+    "webpack-bundle-analyzer": "^2.10.0",
+    "webpack-dev-middleware": "^2.0.5",
     "webpack-hot-middleware": "^2.21.0",
+    "http-proxy-middleware": "^0.17.4",
     "webpack-merge": "^4.1.1",
     "detect-port": "^1.2.2",
     "clean-webpack-plugin": "^0.1.18",
     "whatwg-fetch": "^2.0.3",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-plugin-react": "^7.6.1",
     "express": "^4.16.2"
   }
