--- a/.gitignore
+++ b/.gitignore
@@ -156,4 +156,5 @@ src/main/resources/archimate/Spec301AppendixB/.tmp
 src/main/resources/archimate/Spec301AppendixB/test
 
 # storage
+storage
 storage/.git
