--- a/akka/build.gradle
+++ b/akka/build.gradle
@@ -1,12 +1,22 @@
+ext {
+    akkaVersion = "2.5.11"
+    akkaHttpVersion = "10.1.0"
+    jgitVersion = "4.11.0.201803080745-r"
+}
+
 dependencies {
     compile "com.typesafe.play:play-json_${scalaLibVersion}:${playVersion}"
 
     compile "com.typesafe.akka:akka-actor_${scalaLibVersion}:${akkaVersion}"
     compile "com.typesafe.akka:akka-slf4j_${scalaLibVersion}:${akkaVersion}"
-    compile "com.typesafe.akka:akka-stream_${scalaLibVersion}:${akkaVersion}"
-    compile "com.typesafe.akka:akka-cluster_${scalaLibVersion}:${akkaVersion}"
     compile "com.typesafe.akka:akka-persistence_${scalaLibVersion}:${akkaVersion}"
+
+    //compile "com.typesafe.akka:akka-cluster_${scalaLibVersion}:${akkaVersion}"
+    //compile "com.typesafe.akka:akka-cluster-sharding_${scalaLibVersion}:${akkaVersion}"
+    //compile "com.typesafe.akka:akka-distributed-data_${scalaLibVersion}:${akkaVersion}"
+
+    compile "com.typesafe.akka:akka-stream_${scalaLibVersion}:${akkaVersion}"
     compile "com.typesafe.akka:akka-http_${scalaLibVersion}:${akkaHttpVersion}"
 
-    compile "org.eclipse.jgit:org.eclipse.jgit:4.10.0.201712302008-r"
+    compile "org.eclipse.jgit:org.eclipse.jgit:${jgitVersion}"
 }
