--- a/archimate-frontend/package.json
+++ b/archimate-frontend/package.json
@@ -37,71 +37,69 @@
   },
   "license": "MIT",
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-dnd": "^2.6.0",
-    "react-dnd-html5-backend": "^2.6.0",
-    "react-tap-event-plugin": "^3.0.2",
+    "react-dnd": "^3.0.0",
+    "react-dnd-html5-backend": "^3.0.0",
     "redux": "^4.0.0",
-    "redux-form": "^7.3.0",
+    "redux-form": "^7.4.2",
     "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "redux-undo": "^0.6.1",
-    "material-ui": "^1.0.0-beta.43",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "lodash": "^4.17.10",
+    "@material-ui/core": "^3.0.3",
+    "@material-ui/icons": "^3.0.1",
+    "lodash": "^4.17.11",
     "svg-intersections": "^0.4.0",
     "react-localstorage": "^0.3.1",
     "typeface-roboto": "^0.0.54",
     "dom-to-image": "^2.6.0",
     "file-saver": "^1.3.8",
-    "qs": "^6.5.1",
-    "qhistory": "^1.0.0"
+    "qs": "^6.5.2",
+    "qhistory": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-es2015-constants": "^6.1.4",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-es2015-constants": "^6.1.4",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
-    "react-hot-loader": "^4.1.2",
-    "colors": "^1.2.1",
+    "babel-runtime": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "colors": "^1.3.2",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "detect-port": "^1.2.3",
+    "enzyme": "^3.6.0",
+    "eslint": "^5.6.0",
+    "eslint-plugin-react": "^7.11.1",
+    "express": "^4.16.3",
+    "http-proxy-middleware": "^0.19.0",
     "ignore-styles": "^5.0.1",
-    "mocha": "^5.1.1",
-    "node-sass": "^4.9.0",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.9.3",
+    "react-hot-loader": "^4.3.8",
     "redux-freeze": "^0.1.5",
     "redux-logger": "^3.0.6",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.1",
-    "http-proxy-middleware": "^0.18.0",
-    "webpack-merge": "^4.1.2",
-    "detect-port": "^1.2.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "whatwg-fetch": "^2.0.4",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
-    "express": "^4.16.3"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.20.2",
+    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-hot-middleware": "^2.24.2",
+    "webpack-merge": "^4.1.4"
   }
 }
