--- a/build.gradle
+++ b/build.gradle
@@ -5,22 +5,25 @@ apply plugin: "idea"
 
 subprojects {
 
+    apply plugin: "idea"
     apply plugin: "java"
     apply plugin: "scala"
     apply plugin: "maven"
 
+    compileJava.options.encoding = 'UTF-8'
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
     ext {
         scalaLibVersion = "2.12"
-        scalaVersion = "${scalaLibVersion}.6"
+        scalaVersion = "${scalaLibVersion}.8"
         zincScalaVersion = "2.10.7" // zinc is build with scala 2.10
         slf4j = "1.7.25"
-        playVersion = "2.6.10"
+        playVersion = "2.6.13"
     }
 
     repositories {
+        mavenLocal()
         mavenCentral()
         jcenter()
     }
@@ -35,8 +38,10 @@ subprojects {
         compile "org.scala-lang:scala-reflect:${scalaVersion}"
 
         compile "com.google.code.findbugs:jsr305:3.0.2"
+        compile "javax.annotation:javax.annotation-api:1.3.2"
 
-        compile "org.apache.commons:commons-lang3:3.7"
+        compile "org.apache.commons:commons-lang3:3.8.1"
+        compile "commons-codec:commons-codec:1.11"
         compile "commons-io:commons-io:2.6"
 
         compile "org.slf4j:slf4j-api:${slf4j}"
