--- a/archimate-state/src/main/resources/reference.conf
+++ b/archimate-state/src/main/resources/reference.conf
@@ -8,8 +8,8 @@ akka {
     pretty = on
     dir = "storage"
     max-load-attempts = 3
-    commiter.name = "Mentha Archimate"
-    commiter.mail = "archimate@localhost"
+    committer.name = "Mentha Archimate"
+    committer.mail = "archimate@localhost"
   }
 
   persistence.snapshot-store.jgit-path-model {
@@ -20,8 +20,8 @@ akka {
     pretty = on
     dir = "storage"
     max-load-attempts = 3
-    commiter.name = "Mentha Archimate"
-    commiter.mail = "archimate@localhost"
+    committer.name = "Mentha Archimate"
+    committer.mail = "archimate@localhost"
   }
 
   mentha.state.persistence.journal = "akka.persistence.journal.inmem"
