--- a/akka/build.gradle
+++ b/akka/build.gradle
@@ -1,22 +1,16 @@
-ext {
-    akkaVersion = "2.5.22"
-    akkaHttpVersion = "10.1.8"
-    jgitVersion = "5.3.0.201903130848-r"
-}
-
 dependencies {
-    compile "com.typesafe.play:play-json_${scalaLibVersion}:${playVersion}"
+    api "com.typesafe.play:play-json_${scalaLibVersion}:${playVersion}"
 
-    compile "com.typesafe.akka:akka-actor_${scalaLibVersion}:${akkaVersion}"
-    compile "com.typesafe.akka:akka-slf4j_${scalaLibVersion}:${akkaVersion}"
-    compile "com.typesafe.akka:akka-persistence_${scalaLibVersion}:${akkaVersion}"
+    api "com.typesafe.akka:akka-actor_${scalaLibVersion}:${akkaVersion}"
+    api "com.typesafe.akka:akka-slf4j_${scalaLibVersion}:${akkaVersion}"
+    api "com.typesafe.akka:akka-persistence_${scalaLibVersion}:${akkaVersion}"
 
-    //compile "com.typesafe.akka:akka-cluster_${scalaLibVersion}:${akkaVersion}"
-    //compile "com.typesafe.akka:akka-cluster-sharding_${scalaLibVersion}:${akkaVersion}"
-    //compile "com.typesafe.akka:akka-distributed-data_${scalaLibVersion}:${akkaVersion}"
+    //api "com.typesafe.akka:akka-cluster_${scalaLibVersion}:${akkaVersion}"
+    //api "com.typesafe.akka:akka-cluster-sharding_${scalaLibVersion}:${akkaVersion}"
+    //api "com.typesafe.akka:akka-distributed-data_${scalaLibVersion}:${akkaVersion}"
 
-    compile "com.typesafe.akka:akka-stream_${scalaLibVersion}:${akkaVersion}"
-    compile "com.typesafe.akka:akka-http_${scalaLibVersion}:${akkaHttpVersion}"
+    api "com.typesafe.akka:akka-stream_${scalaLibVersion}:${akkaVersion}"
+    api "com.typesafe.akka:akka-http_${scalaLibVersion}:${akkaHttpVersion}"
 
-    compile "org.eclipse.jgit:org.eclipse.jgit:${jgitVersion}"
+    api "org.eclipse.jgit:org.eclipse.jgit:${jgitVersion}"
 }
