--- a/archimate-model/build.gradle
+++ b/archimate-model/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile "com.typesafe.play:play-json_${scalaLibVersion}:${playVersion}"
+    api "com.typesafe.play:play-json_${scalaLibVersion}:${playVersion}"
 
-    compile "org.scala-lang.modules:scala-xml_${scalaLibVersion}:1.1.1"
-    compile "org.scala-lang.modules:scala-parser-combinators_${scalaLibVersion}:1.1.1"
-    compile "org.scalaz:scalaz-core_${scalaLibVersion}:7.2.27"
+    api "org.scala-lang.modules:scala-xml_${scalaLibVersion}:1.1.2"
+    api "org.scala-lang.modules:scala-parser-combinators_${scalaLibVersion}:1.1.2"
+    api "org.scalaz:scalaz-core_${scalaLibVersion}:7.3.3"
 }
