--- a/archimate-utils/build.gradle
+++ b/archimate-utils/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
-    compile project(":akka")
-    compile project(":archimate-model")
+    api project(":akka")
+    api project(":archimate-model")
+
+    api "com.typesafe.akka:akka-actor_${scalaLibVersion}:${akkaVersion}"
 }
