--- a/archimate-wiki/build.gradle
+++ b/archimate-wiki/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile project(":akka")
-    compile project(":archimate-model")
+    api project(":akka")
+    api project(":archimate-model")
 }
