--- a/build.gradle
+++ b/build.gradle
@@ -7,48 +7,52 @@ subprojects {
 
     apply plugin: "idea"
     apply plugin: "java"
+    apply plugin: "java-library"
     apply plugin: "scala"
-    apply plugin: "maven"
 
     compileJava.options.encoding = 'UTF-8'
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    compileJava.sourceCompatibility = 11
+    compileJava.targetCompatibility = 11
+
+    sourceCompatibility = 11
+    targetCompatibility = 11
+
+    scala {
+        zincVersion = "1.3.0"
+    }
 
     ext {
-        scalaLibVersion = "2.12"
-        scalaVersion = "${scalaLibVersion}.8"
-        zincScalaVersion = "2.10.7" // zinc is build with scala 2.10
-        slf4j = "1.7.25"
-        playVersion = "2.6.13"
+        scalaLibVersion = "2.13"
+        scalaVersion = "${scalaLibVersion}.5"
+        slf4j = "1.7.30"
+        playVersion = "2.9.2"
+        akkaVersion = "2.6.14"
+        akkaHttpVersion = "10.2.4"
+        jgitVersion = "5.11.0.202103091610-r"
     }
 
     repositories {
         mavenLocal()
         mavenCentral()
-        jcenter()
     }
 
     dependencies {
-        zinc "com.typesafe.zinc:zinc:0.3.15"
-        zinc "org.scala-lang:scala-library:${zincScalaVersion}"
-        zinc "org.scala-lang:scala-reflect:${zincScalaVersion}"
-        zinc "org.scala-lang:scala-compiler:${zincScalaVersion}"
+        api "org.scala-lang:scala-library:${scalaVersion}"
+        api "org.scala-lang:scala-reflect:${scalaVersion}"
 
-        compile "org.scala-lang:scala-library:${scalaVersion}"
-        compile "org.scala-lang:scala-reflect:${scalaVersion}"
+        api "org.scala-lang.modules:scala-xml_${scalaLibVersion}:1.2.0"
 
-        compile "com.google.code.findbugs:jsr305:3.0.2"
-        compile "javax.annotation:javax.annotation-api:1.3.2"
+        api "javax.annotation:javax.annotation-api:1.3.2"
+        api "com.google.code.findbugs:jsr305:3.0.2"
 
-        compile "org.apache.commons:commons-lang3:3.8.1"
-        compile "commons-codec:commons-codec:1.11"
-        compile "commons-io:commons-io:2.6"
+        api "org.apache.commons:commons-lang3:3.12.0"
+        api "commons-codec:commons-codec:1.15"
+        api "commons-io:commons-io:2.8.0"
 
-        compile "org.slf4j:slf4j-api:${slf4j}"
-        compile "org.slf4j:slf4j-log4j12:${slf4j}"
+        api "org.slf4j:slf4j-api:${slf4j}"
+        api "org.slf4j:slf4j-log4j12:${slf4j}"
 
-        testCompile "junit:junit:4.12"
-        testCompile "org.scalatest:scalatest_${scalaLibVersion}:3.0.5"
+        testImplementation "junit:junit:4.13"
+        testImplementation "org.scalatest:scalatest_${scalaLibVersion}:3.0.8"
     }
-
 }
