--- a/junk/build.gradle
+++ b/junk/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile project(":akka")
-    compile project(":archimate-model")
-    compile project(":archimate-state")
-    compile project(":archimate-wiki")
-    compile project(":archimate-utils")
+    api project(":akka")
+    api project(":archimate-model")
+    api project(":archimate-state")
+    api project(":archimate-wiki")
+    api project(":archimate-utils")
 }
